# RESEARCH-Math-Exploration

./: .gitignore  LICENSE  Makefile  NOTICE  Project.toml  README.md  pyproject.toml  requirements.txt
lab-notebook/: 2020-07-01-KTC-probability_distribution_of_exponential_moving_average.html  2020-07-01-KTC-probability_distribution_of_exponential_moving_average.ipynb  2020-07-01-KTC-probability_distribution_of_exponential_moving_average.py  2020-07-27-KTC-bayesian_optimization.html  2020-07-27-KTC-bayesian_optimization.ipynb  2020-07-27-KTC-bayesian_optimization.py  2020-08-03-KTC-gaussian_processes.html  2020-08-03-KTC-gaussian_processes.ipynb  2020-09-30-KTC-orthogonalization_algorithms.html  2020-09-30-KTC-orthogonalization_algorithms.ipynb  2020-09-30-KTC-orthogonalization_algorithms.jl
math-explorations/: Makefile  pyproject.toml
math-explorations/notebooks/: 2020-07-01-KTC-probability_distribution_of_exponential_moving_average.ipynb  2020-08-03-KTC-gaussian_processes.ipynb  2020-09-30-KTC-orthogonalization_algorithms.ipynb  2022-02-17-Tests_for_Uniformity_of_Distributions_on_Unit_Hyperspheres.ipynb  2022-02-18-Distributions_of_Blade_Volumes.ipynb  2022-12-15-Accuracy_of_Polynomial_Interpolation.ipynb
notebooks/: 2020-07-01-KTC-probability_distribution_of_exponential_moving_average.html  2020-07-01-KTC-probability_distribution_of_exponential_moving_average.ipynb  2020-07-01-KTC-probability_distribution_of_exponential_moving_average.py  2020-07-27-KTC-bayesian_optimization.html  2020-07-27-KTC-bayesian_optimization.ipynb  2020-07-27-KTC-bayesian_optimization.py  2020-09-30-KTC-orthogonalization_algorithms.html  (+20 more)
(+11 files in other folders)
